Change nullable annotations to jetbrains
* remove checker framework
* add graalvm feature
* tweak source code structure